fix profile__info for overflow

--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -3,6 +3,10 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.22;
+  width: 90%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 768px) {
