--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -2,6 +2,7 @@
   width: 24px;
   height: 24px;
   padding: 0;
+  margin-top: 7px;
   background: #000 url(../../../images/pen-icon.svg) no-repeat center;
   background-size: 10px 10px;
   border: 1px solid #fff;
@@ -18,5 +19,6 @@
     width: 18px;
     height: 18px;
     background-size: 8px 8px;
+    margin: 0;
   }
 }
