--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,3 +1,13 @@
 .profile__info {
-  flex: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  max-width: calc(100% - 300px);
+}
+
+@media screen and (max-width: 768px) {
+  .profile__info {
+    justify-content: center;
+    max-width: 100%;
+  }
 }
