--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,9 +1,12 @@
 .profile__name {
-  display: inline;
   margin: 0 18px 0 0;
   font-weight: 500;
   font-size: 42px;
   line-height: 1.14;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 85%;
 }
 
 @media screen and (max-width: 768px) {
